# rust-rest-api-with-rocket

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-example.env  example.env
docker/: Dockerfile  docker-compose.yml
src/: db.rs  main.rs
src/controllers/: post_controller.rs
src/models/: User.rs  post.rs
src/routes/: post_routes.rs
