[package]
name = "rust-rest-api-with-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
serde = "1.0.188"
serde_derive = "1.0.190"
serde_json = "1.0.108"
chrono = "0.4.26"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
tokio = "1.33.0"

[profile.release]
lto = true
panic = "abort"
